prepare for npm repo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,18 @@
 {
-  "extends": "tsex/tsconfig.json",
   "compilerOptions": {
-    "noUnusedParameters": false
-  }
+    "target": "ESNext",
+    "module": "commonjs",
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "noImplicitAny": true,
+    "sourceMap": true,
+    "baseUrl": ".",
+    "outDir": "dist",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "jsx":"react-jsx",
+    "declaration": true,
+  },
+  "include": ["src"]
 }
