--- a/package.json
+++ b/package.json
@@ -3,18 +3,8 @@
   "repository": "github:fabiospampinato/watcher",
   "description": "The file system watcher that strives for perfection, with no native dependencies and optional rename detection support.",
   "version": "2.3.1",
-  "type": "module",
   "main": "dist/watcher.js",
-  "exports": "./dist/watcher.js",
-  "types": "./dist/watcher.d.ts",
-  "scripts": {
-    "clean": "tsex clean",
-    "compile": "tsex compile",
-    "compile:watch": "tsex compile --watch",
-    "test": "tsex test",
-    "test:watch": "tsex test --watch",
-    "prepublishOnly": "tsex prepare"
-  },
+  "scripts": {},
   "keywords": [
     "fs",
     "file",
@@ -23,15 +13,13 @@
     "watch",
     "watcher"
   ],
-  "dependencies": {
-    "dettle": "^1.0.2",
-    "stubborn-fs": "^1.2.5",
-    "tiny-readdir": "^2.7.2"
-  },
   "devDependencies": {
     "@types/node": "^20.4.6",
-    "fava": "^0.2.0",
-    "tsex": "^3.0.0",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "@phlegmaticprogrammer/dettle": "^1.1.0",
+    "@phlegmaticprogrammer/stubborn-fs": "^1.3.0",
+    "@phlegmaticprogrammer/tiny-readdir": "^2.8.0"
   }
 }
